New visualisation for final distance based on buttonTime

--- a/notebook/Day06.ipynb
+++ b/notebook/Day06.ipynb
@@ -72,6 +72,33 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "plot(triesResultsDF) {\n",
+    "    groupBy(raceNr, buttonTime) {\n",
+    "        hLine {\n",
+    "            yIntercept.constant(1.0)\n",
+    "            color = Color.BLACK\n",
+    "            type = LineType.DASHED\n",
+    "        }\n",
+    "        points { \n",
+    "            x(buttonTime)\n",
+    "            y(relativeTotalDistance)\n",
+    "            size = 5.0\n",
+    "            color(relativeTotalDistance) {\n",
+    "                scale = continuousColorHue(direction = WheelDirection.CLOCKWISE)\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "val progressDF = triesResultsDF.add(\"t\") { (0..timeAvailable).toList() }.explode(\"t\")"
    ],
    "metadata": {
